force-app/main/default/objects/ECM_Service_Activity__c/ECM_Service_Activity__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>ECM Service Entry</label>
    <nameField>
        <label>ECM Service Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECM Service Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>