force-app/main/default/objects/ECM_Service_Activity__c/fields/ECM_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual client or group service entry configuration.</inlineHelpText>
    <label>ECM Service Entry Configuration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ECM_Configuration__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Intake</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ECM_Configuration__c</referenceTo>
    <relationshipName>Service_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>