force-app/main/default/objects/ECM_Service_Activity__c/fields/ECM_PDF_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_PDF_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The configuration used to render the output from the Service Activity for PDF rendering and printing (Progress and Group Notes).</inlineHelpText>
    <label>ECM PDF Configuration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ECM_Configuration__c.PDF_Rendering__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ECM_Configuration__c</referenceTo>
    <relationshipName>ECM_Service_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>