force-app/main/default/objects/ECM_Service_Activity__c/fields/Valid_Case_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Valid_Case_Record_Status__c</fullName>
    <description>The Client service entry page uses this value to query available services.</description>
    <inlineHelpText>The Case Record Status field valids for which this service is valid for.</inlineHelpText>
    <label>Valid Case Record Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Student</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Re-enrolled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Assessed</fullName>
            </value>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>