force-app/main/default/objects/ECM_Service_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Valid_Case_Record_Status__c</columns>
    <columns>Mode__c</columns>
    <columns>Program__c</columns>
    <columns>Type__c</columns>
    <columns>ECM_Configuration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>